[FT:#3622] move zmq io module to common and flatten common

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -112,7 +112,8 @@
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4",
     "source-map-support": "^0.4.2",
-    "updeep": "^1.0.0"
+    "updeep": "^1.0.0",
+    "zmq": "^2.15.3"
   },
   "devEngines": {
     "node": "6.x",
