--- a/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "mocha \"lib/**/*.spec.js\"",
+    "test": "mocha \"+(intervals|zmq)/*.spec.js\"",
     "tw": "npm test -- --watch"
   },
   "dependencies": {
+    "async": "^2.1.2",
     "debug": "^2.2.0",
     "dotenv-safe": "^2.3.2",
     "lodash": "^4.16.2",
-    "ws": "^1.1.1"
+    "ws": "^1.1.1",
+    "zmq": "^2.15.3"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
