--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -93,6 +93,7 @@
     "electron-debug": "^1.0.1",
     "html-to-react": "^1.2.2",
     "lodash": "^4.16.2",
+    "mkdirp": "^0.5.1",
     "moment": "^2.15.2",
     "mustache": "^2.2.1",
     "node-uuid": "^1.4.7",
