--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -68,6 +68,8 @@
     "file-loader": "^0.9.0",
     "jsdom": "^9.5.0",
     "json-loader": "^0.5.4",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "minimist": "^1.2.0",
     "mocha": "^3.1.0",
     "node-libs-browser": "^1.0.0",
