--- a/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
+++ b/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
@@ -7,9 +7,7 @@
     "build-primus-client": "node ./bin/buildPrimusClient",
     "start": "node --max_old_space_size=8000 index",
     "test": "mocha \"lib/**/*.spec.js\"",
-    "tw": "npm test -- --watch",
-    "test-perf": "node --max_old_space_size=5120 test-perf/loki.js",
-    "send-sub-stub": "node stub/sendSubscriptions.js --delay 5000"
+    "tw": "npm test -- --watch"
   },
   "dependencies": {
     "async": "^2.0.1",
@@ -22,11 +20,8 @@
     "lodash": "^4.16.2",
     "lokijs": "^1.4.1",
     "morgan": "~1.7.0",
-    "node-uuid": "^1.4.7",
     "primus": "^6.0.5",
-    "protobufjs": "^5.0.1",
-    "uws": "^0.10.0",
-    "zmq": "^2.15.3"
+    "uws": "^0.10.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -37,7 +32,6 @@
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.3.0",
-    "minimist": "^1.2.0",
     "mocha": "^3.1.0",
     "supertest": "^2.0.0"
   }
