--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -4,20 +4,18 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "NODE_ENV=test BABEL_DISABLE_CACHE=1 mocha --compilers js:babel-register --recursive \"+(lib|VIVL)/**/*.spec.js\"",
-    "test-watch": "npm test -- --watch",
-    "test-e2e": "NODE_ENV=test BABEL_DISABLE_CACHE=1 mocha --compilers js:babel-register --require ./test/setup.js ./test/e2e.js",
-    "lint": "eslint lib test *.js",
-    "hot-server": "node -r babel-register server.js",
+    "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json && npm link ../../../../../common/src/main/js/common/",
+    "build": "npm run build-main && npm run build-renderer",
     "build-main": "NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.electron.js --progress --profile --colors",
     "build-renderer": "NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.production.js --progress --profile --colors",
-    "build": "npm run build-main && npm run build-renderer",
-    "start": "NODE_ENV=production electron ./ --PORT=3100 --HSS=http://127.0.0.1:3000 --FMD_ROOT=/data/work/gitRepositories/dev/src/LPISIS/GPCCHS/GPCCHS_E_VIS/src/client/src/impl/js/client/data --OPEN=large.workspace.json --PROFILING=off",
-    "start-hot": "HOT=1 electron -r ./lib/common/dotenv -r babel-register -r babel-polyfill ./main.development",
+    "lint": "eslint lib test *.js",
     "package": "NODE_ENV=production node -r babel-register -r babel-polyfill package.js",
     "package-all": "npm run package -- --all",
-    "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json && npm link ../../../../../common/src/main/js/common/",
-    "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run start-hot\""
+    "sh": "HOT=1 electron -r ./lib/common/dotenv -r babel-register -r babel-polyfill ./main.development",
+    "start": "NODE_ENV=production electron ./ --PORT=3100 --HSS=http://127.0.0.1:3000 --FMD_ROOT=/data/work/gitRepositories/dev/src/LPISIS/GPCCHS/GPCCHS_E_VIS/src/client/src/impl/js/client/data --OPEN=large.workspace.json --PROFILING=off",
+    "test": "NODE_ENV=test BABEL_DISABLE_CACHE=1 mocha --compilers js:babel-register --recursive \"+(lib|VIVL)/**/*.spec.js\"",
+    "tw": "npm test -- --watch",
+    "wp": "node -r babel-register server.js"
   },
   "bin": {
     "electron": "./node_modules/.bin/electron"
