--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -71,6 +71,16 @@
     "minimist": "^1.2.0",
     "mocha": "^3.1.0",
     "node-libs-browser": "^1.0.0",
+    "postcss": "^5.2.5",
+    "postcss-browser-reporter": "^0.5.0",
+    "postcss-cssnext": "^2.8.0",
+    "postcss-custom-properties": "^5.0.1",
+    "postcss-load-config": "^1.0.0",
+    "postcss-loader": "^1.1.1",
+    "postcss-nesting": "^2.3.1",
+    "postcss-reporter": "^2.0.0",
+    "postcss-smart-import": "^0.5.1",
+    "postcss-url": "^5.1.2",
     "react-addons-test-utils": "^15.3.2",
     "redux-logger": "^2.6.1",
     "sinon": "^1.17.6",
@@ -97,7 +107,6 @@
     "moment": "^2.15.2",
     "mustache": "^2.2.1",
     "node-uuid": "^1.4.7",
-    "postcss": "^5.2.2",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-color": "^2.3.2",
