--- a/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
@@ -4,7 +4,8 @@
   "main": "./lib/index.js",
   "scripts": {
     "lint": "eslint lib test *.js",
-    "test": "DEBUG=GPCCHS:* LEVEL=DEBUG mocha \"+(intervals|zmq|protobuf|stubs)/*.spec.js\"",
+    "coverage": "istanbul cover node_modules/mocha/bin/_mocha \"+(intervals|zmq|protobuf|stubs)/*.spec.js\"",
+    "test": "mocha \"+(intervals|zmq|protobuf|stubs)/*.spec.js\"",
     "tw": "npm test -- --watch",
     "dc-stub": "DEBUG=GPCCHS:* LEVEL=INFO ZMQ_GPCCDC_PUSH=tcp://127.0.0.1:5042 ZMQ_GPCCDC_PULL=tcp://127.0.0.1:49165 node stubs/dc.js",
     "dc-reg": "DEBUG=GPCCHS:* LEVEL=INFO ZMQ_GPCCDC_PUSH=tcp://127.0.0.1:5042 ZMQ_GPCCDC_PULL=tcp://127.0.0.1:49165 node stubs/dcTestReg.js"
@@ -41,6 +42,7 @@
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.3.0",
+    "istanbul": "^0.4.5",
     "mocha": "^3.1.0",
     "supertest": "^2.0.0"
   }
