[HL] Updated parents and version handling for GPCCHS article

--- a/GPCCHS_E_VIS/src/timebar/src/impl/cpp/standaloneTimeBar/src/main/resources/cmakelists/CMakeLists.txt
+++ b/GPCCHS_E_VIS/src/timebar/src/impl/cpp/standaloneTimeBar/src/main/resources/cmakelists/CMakeLists.txt
@@ -25,6 +25,7 @@ message (STATUS, "MODULE_PATH = ${CMAKE_MODULE_PATH}")
 message (STATUS, "construction du projet ${PROJECT_NAME} ${CMAKE_MODULE_PATH}")
 
 include (ISIS REQUIRED)
+include (GPCCHS REQUIRED)
 
 SET (CMAKE_PREFIX_PATH ${find.dependencies.dir} ${CMAKE_PREFIX_PATH})
 
@@ -57,7 +58,7 @@ add_library(${PROJECT_NAME} SHARED ${CPP_LIST} ${UI_FILES} ${MOC_FILES})
 
 target_link_libraries(${PROJECT_NAME} ${ISIS_LIBRARIES})
 
-set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ${CMAKE_SHARED_LIBRARY_SUFFIX}.${GPCC_VERSION})
+set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ${CMAKE_SHARED_LIBRARY_SUFFIX}.${GPCCHS_VERSION})
 
 qt5_use_modules(${PROJECT_NAME} Widgets
 )
