--- a/GPCCHS_E_VIS/src/timebar/src/impl/gpcchs_e_vis/pom.xml
+++ b/GPCCHS_E_VIS/src/timebar/src/impl/gpcchs_e_vis/pom.xml
@@ -6,10 +6,10 @@
   <version>1.1.0-R7S2-SNAPSHOT</version>
   <name>${project.groupId}.${project.artifactId}</name>
   <parent>
-    <groupId>fr.cnes.lpisis</groupId>
-    <artifactId>isis-parent</artifactId>
+    <groupId>fr.cnes.lpisis.gpcc</groupId>
+    <artifactId>gpcchs-parent</artifactId>
     <version>1.1.0-R7S2-SNAPSHOT</version>
-    <relativePath/>
+    <relativePath>../../../../../../src/impl/parent</relativePath>
   </parent>
   <dependencyManagement>
     <dependencies>
@@ -66,7 +66,7 @@
         <artifactId>gpcchs_l_tbr_timeBar</artifactId>
         <type>isis-cpp-module-dependency</type>
         <classifier>unix_dev</classifier>
-        <version>${gpcc.version}</version>
+        <version>${gpcchs.version}</version>
       </dependency>
 
       <!-- Dependencies on internal modules -->
@@ -76,7 +76,14 @@
         <artifactId>gpcchs_e_vis_standaloneTimeBar</artifactId>
         <type>isis-cpp-bundle</type>
         <classifier>unix_dev</classifier>
-        <version>${gpcc.version}</version>
+        <version>${gpcchs.version}</version>
+      </dependency>
+	  <dependency>
+        <groupId>fr.cnes.lpisis.gpcc.js</groupId>
+        <artifactId>gpcchs_e_vis_common</artifactId>
+        <type>isis-js-module-dependency</type>
+        <classifier>unix_dev</classifier>
+        <version>${gpcchs.version}</version>
       </dependency>
       <!--dependency>
         <groupId>fr.cnes.lpisis.gpcc</groupId>
@@ -208,7 +215,6 @@
         <classifier>unix_dev</classifier>
         <version>${gpcc.version}</version>
       </dependency>
-
     </dependencies>
   </dependencyManagement>
 </project>
