--- a/GPCCHS_L_TBR/src/timebar/src/impl/cpp/timeBar/src/main/resources/cmakelists/CMakeLists.txt
+++ b/GPCCHS_L_TBR/src/timebar/src/impl/cpp/timeBar/src/main/resources/cmakelists/CMakeLists.txt
@@ -23,6 +23,7 @@ message (STATUS, "MODULE_PATH = ${CMAKE_MODULE_PATH}")
 message (STATUS, "construction du projet ${PROJECT_NAME} ${CMAKE_MODULE_PATH}")
 
 include (ISIS REQUIRED)
+include (GPCCHS REQUIRED)
 
 SET (CMAKE_PREFIX_PATH ${find.dependencies.dir} ${CMAKE_PREFIX_PATH})
 
@@ -60,7 +61,7 @@ qt5_wrap_cpp(MOC_FILES ${H_LIST})
 add_definitions(-DTIMEBAR)
 
 add_library(${PROJECT_NAME} SHARED ${CPP_LIST} ${UI_FILES} ${MOC_FILES})
-set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ${CMAKE_SHARED_LIBRARY_SUFFIX}.${GPCC_VERSION})
+set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ${CMAKE_SHARED_LIBRARY_SUFFIX}.${GPCCHS_VERSION})
 
 
 target_link_libraries(${PROJECT_NAME} ${ISIS_LIBRARIES})
