--- a/GPCCHS_L_TBR/src/timebar/src/impl/gpcchs_l_tbr/pom.xml
+++ b/GPCCHS_L_TBR/src/timebar/src/impl/gpcchs_l_tbr/pom.xml
@@ -6,10 +6,10 @@
   <version>1.1.0-R7S2-SNAPSHOT</version>
   <name>${project.groupId}.${project.artifactId}</name>
   <parent>
-    <groupId>fr.cnes.lpisis</groupId>
-    <artifactId>isis-parent</artifactId>
+    <groupId>fr.cnes.lpisis.gpcc</groupId>
+    <artifactId>gpcchs-parent</artifactId>
     <version>1.1.0-R7S2-SNAPSHOT</version>
-    <relativePath/>
+    <relativePath>../../../../../../src/impl/parent</relativePath>
   </parent>
   <dependencyManagement>
     <dependencies>
@@ -62,14 +62,14 @@
         <artifactId>gpcchs_l_tbr_jsUtils</artifactId>
         <type>isis-cpp-module-dependency</type>
         <classifier>unix_dev</classifier>
-        <version>${gpcc.version}</version>
+        <version>${gpcchs.version}</version>
       </dependency>
       <dependency>
         <groupId>fr.cnes.lpisis.gpcc.cpp</groupId>
         <artifactId>gpcchs_l_tbr_timeBar</artifactId>
         <type>isis-cpp-module-dependency</type>
         <classifier>unix_dev</classifier>
-        <version>${gpcc.version}</version>
+        <version>${gpcchs.version}</version>
       </dependency>
 
     </dependencies>
