[HL] Cleanup project .env files and update README.md procedures

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.env.example
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.env.example
@@ -1,9 +1,9 @@
 NODE_ENV=development
-PORT=3100
+#PORT=3100
 HSS=http://127.0.0.1:3000
 DEBUG=GPCCHS:*
 LEVEL=INFO
 FMD_ROOT=/data/work/gitRepositories/LPISIS/GPCCHS/GPCCHS_E_VIS/src/client/src/impl/js/client/data
-OPEN=small.workspace.json
+#OPEN=small.workspace.json
 PROFILING=off
 MONITORING=off
