--- a/GPCCHS_E_VIS/src/server/src/impl/js/server/.env.example
+++ b/GPCCHS_E_VIS/src/server/src/impl/js/server/.env.example
@@ -1,14 +1,9 @@
 NODE_ENV=development
 DEBUG=GPCCHS:*
 LEVEL=INFO
-HTTP_LOGS=1
 PORT=3000
 ZMQ_GPCCDC_PUSH=tcp://127.0.0.1:5042
 ZMQ_GPCCDC_PULL=tcp://127.0.0.1:49165
-ZMQ_VIMA_TIMEBAR=tcp://127.0.0.1:4050
-ZMQ_VIMA_TIMEBAR_INIT=tcp://127.0.0.1:5000
-ZMQ_VIMA_STUB_TIMEBAR=tcp://127.0.0.1:4060
-STUB_DC_ON=off
-STUB_TB_ON=off
+STUB_DC_ON=on
 MONITORING=off
 PROFILING=off
