--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -13,7 +13,7 @@
     "package-all": "npm run package -- --all",
     "sh": "HOT=1 electron -r ./lib/common/dotenv -r babel-register -r babel-polyfill ./main.development",
     "start": "NODE_ENV=production electron ./ --PORT=3100 --HSS=http://127.0.0.1:3000 --FMD_ROOT=/data/work/gitRepositories/dev/src/LPISIS/GPCCHS/GPCCHS_E_VIS/src/client/src/impl/js/client/data --OPEN=large.workspace.json --PROFILING=off",
-    "test": "NODE_ENV=test BABEL_DISABLE_CACHE=1 mocha --compilers js:babel-register --recursive \"+(lib|VIVL)/**/*.spec.js\"",
+    "test": "NODE_ENV=test BABEL_DISABLE_CACHE=1 mocha --compilers js:babel-register \"+(lib|VIVL)/**/*.spec.js\"",
     "tw": "npm test -- --watch",
     "wp": "node -r babel-register server.js"
   },
