--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.eslintrc
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.eslintrc
@@ -14,6 +14,7 @@
     "import/no-unresolved": [2, { "ignore": ["electron"] }],
     "import/no-extraneous-dependencies": 0,
     "react/jsx-no-bind": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
     "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx"] }],
     "react/prefer-stateless-function": 0,
     "generator-star-spacing": 0,
