--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -72,11 +72,10 @@
     "node-libs-browser": "^1.0.0",
     "postcss": "^5.2.5",
     "postcss-browser-reporter": "^0.5.0",
-    "postcss-cssnext": "^2.8.0",
     "postcss-custom-properties": "^5.0.1",
     "postcss-load-config": "^1.0.0",
     "postcss-loader": "^1.1.1",
-    "postcss-nesting": "^2.3.1",
+    "postcss-nested": "^1.0.0",
     "postcss-reporter": "^2.0.0",
     "postcss-smart-import": "^0.5.1",
     "postcss-url": "^5.1.2",
@@ -108,7 +107,7 @@
     "node-uuid": "^1.4.7",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
-    "react-color": "^2.3.2",
+    "react-color": "^2.4.3",
     "react-colorpicker": "^0.3.14",
     "react-dom": "^15.3.2",
     "react-grid-layout": "^0.13.8",
