--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -118,6 +118,7 @@
     "react-stockcharts": "^0.6.0-beta.7",
     "redux": "^3.6.0",
     "redux-electron-store": "^0.3.13",
+    "redux-form": "^6.2.0",
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4",
     "source-map-support": "^0.4.2",
