--- a/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
+++ b/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "^6.3.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.1.0",
+    "node-fetch": "^1.6.3",
     "node-uuid": "^1.4.7",
     "supertest": "^2.0.0"
   }
