--- a/GPCCHS_E_VIS/src/common/src/main/js/common/.eslintrc
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/.eslintrc
@@ -1,13 +1,24 @@
 {
-    "extends": "airbnb",
-    "installedESLint": true,
-    "globals": {
-      "describe": true,
-      "it": true,
-      "expect": true,
-      "before": true,
-      "after": true,
-      "beforeEach": true,
-      "afterEach": true
-    }
+  "extends": "airbnb-base",
+  "installedESLint": true,
+  "globals": {
+    "describe": true,
+    "it": true,
+    "before": true,
+    "after": true,
+    "beforeEach": true,
+    "afterEach": true
+  },
+  "rules": {
+    "comma-dangle": [
+      "error",
+      {
+        "arrays": "always-multiline",
+        "objects": "always-multiline",
+        "imports": "always-multiline",
+        "exports": "always-multiline",
+        "functions": "never"
+      }
+    ]
+  }
 }
