--- a/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
+++ b/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
@@ -6,39 +6,32 @@
     "build-primus-client": "node ./bin/buildPrimusClient",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha \"lib/**/*.spec.js\" -- -R spec",
     "hello": "npm install && npm link ../../../../../common/src/main/js/common && [ -f .env ] && echo || cp .env.example .env",
-    "lint": "eslint lib test *.js",
+    "lint": "eslint lib e2e *.js",
     "start": "node --max_old_space_size=8000 index",
     "test": "mocha \"lib/**/*.spec.js\"",
     "e2e": "mocha \"e2e/**/*.spec.js\"",
     "tw": "npm test -- --watch"
   },
   "dependencies": {
-    "async": "^2.0.1",
-    "body-parser": "~1.15.2",
-    "bytebuffer": "^5.0.1",
-    "debug": "^2.2.0",
-    "dotenv-safe": "^2.3.2",
+    "async": "^2.1.4",
+    "debug": "^2.3.3",
+    "dotenv-safe": "^3.0.0",
     "exit": "^0.1.2",
     "express": "4.14.0",
     "lodash": "^4.16.2",
     "lokijs": "^1.4.1",
-    "morgan": "~1.7.0",
     "primus": "^6.0.5",
-    "uws": "^0.10.0"
+    "uws": "^0.11.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-properties": "^1.2.1",
-    "concurrently": "^3.0.0",
-    "eslint": "^3.6.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-import": "^2.0.1",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.3.0",
+    "eslint": "^3.10.2",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-plugin-import": "^2.2.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.1.0",
     "node-fetch": "^1.6.3",
-    "node-uuid": "^1.4.7",
-    "supertest": "^2.0.0"
+    "node-uuid": "^1.4.7"
   }
 }
