--- a/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
+++ b/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
@@ -10,6 +10,7 @@
     "start": "node --max_old_space_size=8000 index",
     "test": "mocha \"lib/**/*.spec.js\"",
     "e2e": "mocha \"e2e/**/*.spec.js\"",
+    "e2e:updateSnapshots": "CHAI_JEST_SNAPSHOT_UPDATE_ALL=1 npm run e2e",
     "tw": "npm test -- --watch"
   },
   "dependencies": {
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-jest-snapshot": "^0.2.1",
     "chai-properties": "^1.2.1",
     "eslint": "^3.10.2",
     "eslint-config-airbnb-base": "^10.0.1",
