[HL]Delete developement preset to make tests working

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.babelrc
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.babelrc
@@ -17,6 +17,10 @@
 				"transform-class-properties"
       ]
     },
+    "jest": {
+      "presets": [
+      ]
+    },
     "development": {
       "presets": [
         "react-hmre"
