--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -75,6 +75,7 @@
     "asar": "^0.12.3",
     "babel-core": "^6.14.0",
     "babel-eslint": "^7.0.0",
+    "babel-jest": "^17.0.2",
     "babel-loader": "^6.2.5",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-dev-expression": "^0.2.1",
@@ -107,6 +108,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "fbjs-scripts": "^0.7.1",
     "file-loader": "^0.9.0",
+    "jest": "^17.0.3",
     "jsdom": "^9.5.0",
     "json-loader": "^0.5.4",
     "less": "^2.7.1",
@@ -124,6 +126,7 @@
     "postcss-smart-import": "^0.5.1",
     "postcss-url": "^5.1.2",
     "react-addons-test-utils": "^15.3.2",
+    "react-test-renderer": "^15.4.1",
     "redux-logger": "^2.6.1",
     "sinon": "^1.17.6",
     "spectron": "^3.4.0",
