[FT:#3622] Enforce linting rules regarding CNES common development rules

--- a/GPCCHS_E_VIS/src/common/src/main/js/common/.eslintrc
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/.eslintrc
@@ -19,6 +19,10 @@
         "exports": "always-multiline",
         "functions": "never"
       }
-    ]
+    ],
+    "max-statements-per-line": ["off", { "max": 1 }],
+    "complexity": ["off", 11],
+    "max-statements": ["off", 10],
+    "max-depth": ["off", 4]
   }
 }
