--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.eslintrc
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.eslintrc
@@ -19,7 +19,11 @@
     "react/prefer-stateless-function": 0,
     "generator-star-spacing": 0,
     "react/forbid-prop-types": 0,
-    "react/no-unused-prop-types": ["warn", { "customValidators": [], "skipShapeProps": true }]
+    "react/no-unused-prop-types": ["warn", { "customValidators": [], "skipShapeProps": true }],
+    "max-statements-per-line": ["off", { "max": 1 }],
+    "complexity": ["off", 11],
+    "max-statements": ["off", 10],
+    "max-depth": ["off", 4]
   },
   "plugins": [
     "import",
