[FT:#3622]Updated Readme with Jest testing instructions and added tests to Editor components

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -23,6 +23,7 @@
     "test": "BABEL_DISABLE_CACHE=1 mocha --compilers js:babel-register \"+(lib|VIVL)/**/*.spec.js\"",
     "snapshot": "NODE_ENV=test BABEL_DISABLE_CACHE=1 jest",
     "snapshot-watch": "npm run snapshot -- --watch",
+    "snapshot-clean": "jest -u",
     "tw": "npm test -- --watch",
     "wp": "node -r babel-register server.js"
   },
