--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.eslintrc
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.eslintrc
@@ -6,6 +6,9 @@
     "mocha": true,
     "node": true
   },
+  "globals": {
+    "expect": true
+  },
   "rules": {
     "consistent-return": 0,
     "no-restricted-syntax": 0,
@@ -20,10 +23,10 @@
     "generator-star-spacing": 0,
     "react/forbid-prop-types": 0,
     "react/no-unused-prop-types": ["warn", { "customValidators": [], "skipShapeProps": true }],
-    "max-statements-per-line": ["off", { "max": 1 }],
-    "complexity": ["off", 11],
-    "max-statements": ["off", 10],
-    "max-depth": ["off", 4]
+    "max-statements-per-line": ["warn", { "max": 1 }],
+    "complexity": ["warn", 20],
+    "max-statements": ["warn", 100],
+    "max-depth": ["warn", 7]
   },
   "plugins": [
     "import",
