--- a/GPCCHS_E_VIS/src/server/src/impl/js/server/.eslintrc
+++ b/GPCCHS_E_VIS/src/server/src/impl/js/server/.eslintrc
@@ -20,9 +20,9 @@
         "functions": "never"
       }
     ],
-    "max-statements-per-line": ["off", { "max": 1 }],
-    "complexity": ["off", 11],
-    "max-statements": ["off", 10],
-    "max-depth": ["off", 4]
+    "max-statements-per-line": ["warn", { "max": 1 }],
+    "complexity": ["warn", 15],
+    "max-statements": ["warn", 100],
+    "max-depth": ["warn", 7]
   }
 }
