[FT:#3622] Add jest tests. Corrected syntax in mocks. Added a 'mocks' babel shortcut. refs cannot be tested.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.babelrc
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.babelrc
@@ -5,7 +5,10 @@
     "react"
   ],
   "plugins": [
-    "add-module-exports"
+    "add-module-exports",
+    ["module-alias", [
+      { "src": "test/__mocks__/", "expose": "mocks" },
+    ]]
   ],
   "env": {
     "production": {
