--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -80,6 +80,7 @@
     "babel-loader": "^6.2.5",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-dev-expression": "^0.2.1",
+    "babel-plugin-module-alias": "^1.6.0",
     "babel-plugin-transform-class-properties": "^6.16.0",
     "babel-plugin-webpack-loaders": "^0.8.0",
     "babel-polyfill": "^6.13.0",
