[FT:#3622] Removed the babel alias dependecy. Pointing with relative path.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.babelrc
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.babelrc
@@ -5,10 +5,7 @@
     "react"
   ],
   "plugins": [
-    "add-module-exports",
-    ["module-alias", [
-      { "src": "test/__mocks__/", "expose": "mocks" },
-    ]]
+    "add-module-exports"
   ],
   "env": {
     "production": {
