[HL] new logger based on Winston. 'common/debug' is replaced by 'common/log'

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.env.example
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.env.example
@@ -7,3 +7,4 @@ FMD_ROOT=/data/work/gitRepositories/LPISIS/GPCCHS/GPCCHS_E_VIS/src/client/src/im
 #OPEN=small.workspace.json
 PROFILING=off
 MONITORING=off
+#LOG=file:console
