--- a/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
@@ -16,6 +16,7 @@
     "debug": "^2.3.3",
     "lodash": "^4.17.2",
     "protobufjs": "^6.0.2",
+    "winston": "^2.3.0",
     "ws": "^1.1.1",
     "zmq": "^2.15.3"
   },
