--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -49,6 +49,7 @@
     "debug": "^2.2.0",
     "deep-diff": "^0.3.4",
     "dotenv-safe": "^3.0.0",
+    "depd": "^1.1.0",
     "electron-debug": "^1.0.1",
     "html-to-react": "^1.2.2",
     "lodash": "^4.16.2",
