--- a/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
@@ -14,6 +14,7 @@
     "async": "^2.1.4",
     "bytebuffer": "^5.0.1",
     "debug": "^2.3.3",
+    "depd": "^1.1.0",
     "lodash": "^4.17.2",
     "protobufjs": "^6.0.2",
     "winston": "^2.3.0",
