--- a/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
+++ b/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "async": "^2.1.4",
     "debug": "^2.3.3",
+    "depd": "^1.1.0",
     "dotenv-safe": "^3.0.0",
     "exit": "^0.1.2",
     "express": "4.14.0",
