--- a/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
@@ -22,6 +22,8 @@
     "zmq": "^2.15.3"
   },
   "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
     "chai": "^3.5.0",
     "chai-properties": "^1.2.1",
     "eslint": "^3.10.2",
@@ -29,6 +31,18 @@
     "eslint-plugin-import": "^2.2.0",
     "istanbul": "^0.4.5",
     "minimist": "^1.2.0",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-dev-expression": "^0.2.1",
+    "babel-plugin-transform-class-properties": "^6.16.0",
+    "babel-plugin-webpack-loaders": "^0.8.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.14.0"
   }
 }
