--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -12,21 +12,20 @@
   },
   "scripts": {
     "build": "npm run build-main && npm run build-renderer",
-    "build-main": "NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.electron.js --progress --profile --colors",
+    "build-main": "node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.electron.js --progress --profile --colors",
     "build-renderer": "NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.production.js --progress --profile --colors",
-    "hello": "npm install && npm link ../../../../../common/src/main/js/common && [ -f .env ] && echo || cp .env.example .env",
+    "hello": "npm install && npm link ../../../../../common/src/main/js/common && [ -f config.local.json ] && echo || cp config.sample.json config.local.json",
     "lint": "eslint lib test *.js",
-    "package": "NODE_ENV=production node -r babel-register -r babel-polyfill package.js",
-    "package-all": "npm run package -- --all",
-    "sh": "HOT=1 electron -r ./lib/common/dotenv -r babel-register -r babel-polyfill ./main.development",
-    "start": "NODE_ENV=production electron ./ --PORT=3100 --HSS=http://127.0.0.1:3000 --FMD_ROOT=/data/work/gitRepositories/LPISIS/GPCCHS/GPCCHS_E_VIS/src/client/src/impl/js/client/data --OPEN=small.workspace.json --PROFILING=off --DEBUG=* --LEVEL=DEBUG",
+    "package": "node -r babel-register -r babel-polyfill package.js",
+    "sh": "HOT=1 electron -r babel-register -r babel-polyfill ./main.development",
+    "start": "electron ./",
     "test": "BABEL_DISABLE_CACHE=1 mocha --compilers js:babel-register \"+(lib|VIVL)/**/*.spec.js\"",
     "test:watch": "npm test -- --watch",
     "snapshot": "NODE_ENV=test BABEL_DISABLE_CACHE=1 jest",
     "snapshot-watch": "npm run snapshot -- --watch",
     "snapshot-clean": "jest -u",
     "tw": "npm test -- --watch",
-    "wp": "node -r babel-register server.js"
+    "wp": "node -r babel-register server.js --PORT=3100"
   },
   "bin": {
     "electron": "./node_modules/.bin/electron"
@@ -116,7 +115,6 @@
     "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "minimist": "^1.2.0",
     "mocha": "^3.2.0",
     "postcss": "^5.2.5",
     "postcss-browser-reporter": "^0.5.0",
