--- a/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
+++ b/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
@@ -29,6 +29,7 @@
     "chai": "^3.5.0",
     "chai-jest-snapshot": "^0.2.1",
     "chai-properties": "^1.2.1",
+    "dotenv": "^2.0.0",
     "eslint": "^3.10.2",
     "eslint-config-airbnb-base": "^10.0.1",
     "eslint-plugin-import": "^2.2.0",
