[HL] Initialized 1.1.0-R7S4-SNAPSHOT from branch R7S2-dev

--- a/GPCCHS_L_TBR/src/timebar/src/impl/gpcchs_l_tbr/pom.xml
+++ b/GPCCHS_L_TBR/src/timebar/src/impl/gpcchs_l_tbr/pom.xml
@@ -1,21 +1,20 @@
-<?xml version="1.0" ?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" ?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.cnes.lpisis.gpcc</groupId>
   <artifactId>gpcchs_l_tbr-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.1.0-R7S2-SNAPSHOT</version>
+  <version>1.1.0-R7S4-SNAPSHOT</version>
   <name>${project.groupId}.${project.artifactId}</name>
   <parent>
     <groupId>fr.cnes.lpisis.gpcc</groupId>
     <artifactId>gpcchs-parent</artifactId>
-    <version>1.1.0-R7S2-SNAPSHOT</version>
+    <version>1.1.0-R7S4-SNAPSHOT</version>
     <relativePath>../../../../../../src/impl/parent</relativePath>
   </parent>
   <dependencyManagement>
     <dependencies>
-
       <!-- Dependencies on GPIN -->
-
       <dependency>
         <groupId>fr.cnes.lpisis.gpin.cpp</groupId>
         <artifactId>gpin_sessionLibrary</artifactId>
@@ -23,9 +22,7 @@
         <classifier>unix_dev</classifier>
         <version>${gpin.version}</version>
       </dependency>
-
       <!-- Dependencies on GPCCCM modules -->
-
       <dependency>
         <groupId>fr.cnes.lpisis.gpcc.cpp</groupId>
         <artifactId>gpcccm_l_cml_commonMMI</artifactId>
@@ -54,9 +51,7 @@
         <classifier>unix_dev</classifier>
         <version>${gpcccm.version}</version>
       </dependency>
-
       <!-- Dependencies on internal modules -->
-
       <dependency>
         <groupId>fr.cnes.lpisis.gpcc.cpp</groupId>
         <artifactId>gpcchs_l_tbr_jsUtils</artifactId>
@@ -71,7 +66,6 @@
         <classifier>unix_dev</classifier>
         <version>${gpcchs.version}</version>
       </dependency>
-
     </dependencies>
   </dependencyManagement>
 </project>
