--- a/GPCCHS_E_VIS/src/launcher/pom.xml
+++ b/GPCCHS_E_VIS/src/launcher/pom.xml
@@ -1,50 +1,50 @@
-<?xml version="1.0" ?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <!-- Produced by  -->
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>fr.cnes.lpisis.gpcc.js</groupId>
-    <artifactId>gpcchs_e_vis_launcher</artifactId>
-    <packaging>isis-js-bundle</packaging>
-    <version>1.1.0-R7S2-SNAPSHOT</version>
-
-    <parent>
-        <groupId>fr.cnes.lpisis.gpcc</groupId>
-        <artifactId>gpcchs_e_vis-parent</artifactId>
-        <version>1.1.0-R7S2-SNAPSHOT</version>
-        <relativePath/>
-    </parent>
-    
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <find.dependencies.dir>${basedir}/target/dependencies</find.dependencies.dir>
-        <api.target.dir>${basedir}/target</api.target.dir>
-        <api.lib.dir>${api.target.dir}/lib</api.lib.dir>
-        <api.work.dir>${api.target.dir}/work</api.work.dir>
-        <api.main.dir>${api.work.dir}/${artifactId}-${project.version}</api.main.dir>
-    </properties>
-    <dependencies>
-        <dependency>
-            <groupId>fr.cnes.lpisis.gpcc.js</groupId>
-            <artifactId>gpcchs_e_vis_client</artifactId>
-            <type>isis-js-bundle</type>
-            <classifier>unix_dev</classifier>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.gpcc.js</groupId>
-            <artifactId>gpcchs_e_vis_server</artifactId>
-            <type>isis-js-bundle</type>
-            <classifier>unix_dev</classifier>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>zmq</artifactId>
-            <type>isis-cots</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.cnes.lpisis.cots</groupId>
-            <artifactId>node</artifactId>
-            <type>isis-cots</type>
-        </dependency>
-    </dependencies>
+<?xml version="1.0" ?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <!-- Produced by  -->
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>fr.cnes.lpisis.gpcc.js</groupId>
+  <artifactId>gpcchs_e_vis_launcher</artifactId>
+  <packaging>isis-js-bundle</packaging>
+  <version>1.1.0-R7S4-SNAPSHOT</version>
+  <name>${project.groupId}.${project.artifactId}</name>
+  <parent>
+    <groupId>fr.cnes.lpisis.gpcc</groupId>
+    <artifactId>gpcchs_e_vis-parent</artifactId>
+    <version>1.1.0-R7S4-SNAPSHOT</version>
+    <relativePath/>
+  </parent>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <find.dependencies.dir>${basedir}/target/dependencies</find.dependencies.dir>
+    <api.target.dir>${basedir}/target</api.target.dir>
+    <api.lib.dir>${api.target.dir}/lib</api.lib.dir>
+    <api.work.dir>${api.target.dir}/work</api.work.dir>
+    <api.main.dir>${api.work.dir}/${artifactId}-${project.version}</api.main.dir>
+  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>fr.cnes.lpisis.gpcc.js</groupId>
+      <artifactId>gpcchs_e_vis_client</artifactId>
+      <type>isis-js-bundle</type>
+      <classifier>unix_dev</classifier>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>fr.cnes.lpisis.gpcc.js</groupId>
+      <artifactId>gpcchs_e_vis_server</artifactId>
+      <type>isis-js-bundle</type>
+      <classifier>unix_dev</classifier>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>fr.cnes.lpisis.cots</groupId>
+      <artifactId>zmq</artifactId>
+      <type>isis-cots</type>
+    </dependency>
+    <dependency>
+      <groupId>fr.cnes.lpisis.cots</groupId>
+      <artifactId>node</artifactId>
+      <type>isis-cots</type>
+    </dependency>
+  </dependencies>
 </project>
