--- a/GPCCHS_L_TBR/src/timebar/src/impl/cpp/timeBar/pom.xml
+++ b/GPCCHS_L_TBR/src/timebar/src/impl/cpp/timeBar/pom.xml
@@ -1,14 +1,15 @@
-<?xml version="1.0" ?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" ?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>fr.cnes.lpisis.gpcc.cpp</groupId>
   <artifactId>gpcchs_l_tbr_timeBar</artifactId>
   <packaging>isis-cpp-module-dependency</packaging>
-  <version>1.1.0-R7S2-SNAPSHOT</version>
+  <version>1.1.0-R7S4-SNAPSHOT</version>
   <name>${project.groupId}.${project.artifactId}</name>
   <parent>
     <groupId>fr.cnes.lpisis.gpcc</groupId>
     <artifactId>gpcchs_l_tbr-parent</artifactId>
-    <version>1.1.0-R7S2-SNAPSHOT</version>
+    <version>1.1.0-R7S4-SNAPSHOT</version>
     <relativePath/>
   </parent>
   <properties>
@@ -22,7 +23,6 @@
       <type>isis-cpp-module-dependency</type>
       <classifier>unix_dev</classifier>
     </dependency>
-
     <dependency>
       <groupId>fr.cnes.lpisis.gpcc.cpp</groupId>
       <artifactId>gpcccm_l_cml_timeBarsModel</artifactId>
@@ -41,7 +41,6 @@
       <type>isis-cpp-module-dependency</type>
       <classifier>unix_dev</classifier>
     </dependency>
-
     <dependency>
       <groupId>fr.cnes.lpisis.gpcc.cpp</groupId>
       <artifactId>gpcccm_l_cml_sessionLibraryWrapper</artifactId>
