[HL] implement a circuit breaker in orchestration loop. It's FA:#4678

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.env.example
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.env.example
@@ -7,4 +7,5 @@ FMD_ROOT=/data/work/gitRepositories/LPISIS/GPCCHS/GPCCHS_E_VIS/src/client/src/im
 #OPEN=small.workspace.json
 PROFILING=off
 MONITORING=off
-#LOG=file:console
+LOG=file:console
+RENDERER_CIRCUIT_BREAKER=on
