[FT:#3622] Now server and dc stubs are launched from client main process and close on main process exit.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/config.default.json
@@ -1,8 +1,8 @@
 {
+  "LOG": "file",
   "LEVEL": "INFO",
   "PROFILING": "off",
   "MONITORING": "off",
   "DEBUG": "off",
-  "FMD_ROOT_DIR": "/data/isis/documents",
-  "LOG": "file"
+  "FMD_ROOT_DIR": "/data/isis/documents"
 }
