[FT:#3622] Cleanup client folder by moving webpack files and config in sub folders.

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.babelrc
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.babelrc
@@ -27,7 +27,7 @@
         [
           "webpack-loaders",
           {
-            "config": "webpack.config.node.js",
+            "config": "webpack/config.babel.js",
             "verbose": false
           }
         ]
