--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/.eslintrc
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/.eslintrc
@@ -35,7 +35,7 @@
   "settings": {
     "import/resolver": {
       "webpack": {
-        "config": "webpack.config.eslint.js"
+        "config": "webpack/config.eslint.js"
       }
     }
   }
