[HL] Fix linting . . .

--- a/GPCCHS_E_VIS/src/server/src/impl/js/server/.eslintrc
+++ b/GPCCHS_E_VIS/src/server/src/impl/js/server/.eslintrc
@@ -11,6 +11,10 @@
   },
   "rules": {
     "no-underscore-dangle": 0,
+    "import/no-extraneous-dependencies": [
+      "error",
+      { "devDependencies": true, "peerDependencies": true }
+    ],
     "comma-dangle": [
       "error",
       {
