--- a/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
+++ b/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
@@ -33,5 +33,8 @@
     "mocha": "^3.2.0",
     "node-fetch": "^1.6.3",
     "node-uuid": "^1.4.7"
+  },
+  "peerDependencies": {
+    "common": "../../../../../common/src/main/js/common"
   }
 }
