--- a/GPCCHS_E_VIS/src/server/src/impl/js/server/.eslintrc
+++ b/GPCCHS_E_VIS/src/server/src/impl/js/server/.eslintrc
@@ -10,6 +10,10 @@
     "afterEach": true
   },
   "rules": {
+    "max-statements-per-line": ["warn", { "max": 1 }],
+    "complexity": ["warn", 50],
+    "max-statements": ["warn", 100],
+    "max-depth": ["warn", 7],
     "no-underscore-dangle": 0,
     "import/no-extraneous-dependencies": [
       "error",
@@ -24,10 +28,6 @@
         "exports": "always-multiline",
         "functions": "never"
       }
-    ],
-    "max-statements-per-line": ["warn", { "max": 1 }],
-    "complexity": ["warn", 15],
-    "max-statements": ["warn", 100],
-    "max-depth": ["warn", 7]
+    ]
   }
 }
